--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,7 +12,7 @@ aside{
     text-align: center;
 }
 
-asideimg{
+.aside{
     width: 200px;
     height: auto;
 }
@@ -25,4 +25,37 @@ footer{
     margin-top: 15px;
     border-top: 1px solid #000;
     text-align: center;
+}
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+/* Class Selectors */
+
+.box{
+    margin: 1rem;
+    border: 1px solid rgb(0 0 0 / 10%);
+    background-color: #ddd;
+    color: #000;
+}
+
+main img {
+  float: right;        
+  width: auto;        
+  height: 90px;
+  margin: 0 0 10px 15px;
+ 
+}
+
+.aside h2 {
+  position: absolute;
+  top: 50px;
+  left: 120px;
+}
+
+.images{
+     border: 1px solid red;
 }
