--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -113,3 +113,14 @@ nav, p, section, article {
 .logo{
   width: 150px;
 }
+
+h1 {
+  position: absolute;
+  top: 20px;
+  width: 100%;
+  padding: 16px;
+  text-align: center;
+  opacity: 0.7;
+  background-color: var(--accent1-color);
+  color: #fff; 
+}
