--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,6 +1,6 @@
 
 :root {
-  --primary-color: #055a05;
+  --primary-color: #fff;
   --secondary-color: yellow; 
   --accent1-color: grey ; 
   --accent2-color: #000; 
@@ -9,7 +9,7 @@
 }
 
 header {
-    background-color: var(--accent1-color);
+    background-color: var(--primary-color);
     color: var(--accent1-color);
     display: inline-flexbox;
     size: 20px;
@@ -34,6 +34,7 @@ header, main, footer {
 h1, h2 {
   font-family: var(--heading-font);
   color: var(--secondary-color);
+  
 }
 
 
@@ -59,55 +60,14 @@ nav, p, section, article {
     height: auto;
   }
 
-  /* HERO BACKGROUND */
-.hero {
-    background-image: url(../assets/rafting36_1024.jpg);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-
-    width: 100%;
-    height: 500px;
-
-    position: relative;
-    padding-top: 40px;        
-    color: white;
-}
-
-.hero h1 {
-    text-align: center;
-    font-size: 2.2rem;
-    font-weight: 700;
-    color: white;
-    text-shadow: 0 2px 5px rgba(0,0,0,0.6);
-}
-
-.hero-overlay {
-    background-color: #f2c94c;         
-    width: 80%;
-    max-width: 900px;
-    margin: 20px auto 0 auto;           
-    padding: 20px;
-    display: flex;
-    gap: 20px;
-
-    border-left: 5px solid #f39c12;     
-
-    box-shadow: 0 3px 10px rgba(0,0,0,0.4);
-}
-
-.hero-overlay p {
-    flex: 3;   /* bigger area for text */
-    margin: 0;
-    color: #222;
-    line-height: 1.4;
-}
-
-.hero-overlay img {
-    flex: 1;
-    width: 100px;
-    height: auto;
-    border: 3px solid white;
+  .hero {
+  background-image: url(../assets/rafting10_1024.jpg);  
+  background-size: cover;              
+  background-position: center;         
+  background-repeat: no-repeat;      
+  
+  height: 400px;                    
+  width: 100%;                         
 }
 
 .logo{
@@ -124,3 +84,28 @@ h1 {
   background-color: var(--accent1-color);
   color: #fff; 
 }
+
+
+.box {
+  width: 100%;
+  padding: 18px;
+  text-align: center;
+  opacity: 0.7;
+  background-color: var(--accent1-color);
+  color: #fff; 
+}
+
+.about-img{
+  float: right;        
+  width: 150px;        
+  height: 120px;
+  margin: 0 0 10px 15px;
+}
+
+.about{
+  margin: 1rem;
+    border: 1px solid rgb(0 0 0 / 10%);
+    background-color: #ddd;
+    color: #000;
+}
+
