--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,111 +1,83 @@
-
 :root {
-  --primary-color: #fff;
-  --secondary-color: yellow; 
-  --accent1-color: grey ; 
-  --accent2-color: #000; 
+  --primary-color: #055a05; /* forest green */
+  --secondary-color: #f4a261; /* warm sand */
+  --accent1-color: #fff; /* white */
+  --accent2-color: #e9c46a; /* light golden yellow */
   --heading-font: "Times New Roman", "Georgia", serif;
   --body-font: Arial, Helvetica, sans-serif;
 }
 
 header {
-    background-color: var(--primary-color);
-    color: var(--accent1-color);
-    display: inline-flexbox;
-    size: 20px;
+    background-color: var(--accent1-color);
+    color: var(--accent2-color);
   }
 
-  
-* {
+  * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
 
+body {
+  font-family: var(--body-font);
+  color: var(--primary-color);
+}
+
 header, main, footer {
-  width: 950px;
+  width: 840px;
   margin: 0 auto;
 }
 
+.hero-back{
+  width: 840px;
+  display: block;
+  height: auto;
 
-
+}
 
 h1, h2 {
   font-family: var(--heading-font);
-  color: var(--secondary-color);
-  
+  color: var(--primary-color);
+  text-align: center;
+  background-color: #e9c46a;
 }
-
 
 nav, p, section, article {
-  margin: 20px;
-  padding: 10px;
+  margin: 16px;
+  padding: 8px;
 }
 
+.socialmedia a {
+    text-decoration: none;
+}
 
 .hero {
   position: relative;
 }
 
-.article-img{
-    width: 200px;
-    float: right;
-    margin-bottom: 83%;
-}
-
-.hero img {
-    display: block;
-    width: 100%;
-    height: auto;
-  }
-
-  .hero {
-  background-image: url(../assets/rafting10_1024.jpg);  
-  background-size: cover;              
-  background-position: center;         
-  background-repeat: no-repeat;      
-  
-  height: 400px;                    
-  width: 100%;                         
-}
-
-.logo{
-  width: 150px;
-}
-
-h1 {
+h1,article {
   position: absolute;
   top: 20px;
   width: 100%;
   padding: 16px;
   text-align: center;
-  opacity: 0.7;
+  opacity: 0.8;
   background-color: var(--accent1-color);
-  color: #fff; 
+  color: gray; 
 }
 
-
-.box {
-  width: 100%;
-  padding: 18px;
-  text-align: center;
-  opacity: 0.7;
-  background-color: var(--accent1-color);
-  color: #fff; 
+.hero_img{
+  height: 100px;
+  float: right;
+  width: 125px;
 }
 
-.about-img{
-  float: right;        
-  width: 150px;        
-  height: 120px;
-  margin: 0 0 10px 15px;
+article{
+  margin-top: 250px;
+  margin-left: 0;
 }
 
-.about{
-  margin: 1rem;
-    border: 1px solid rgb(0 0 0 / 10%);
-    background-color: #ddd;
-    color: #000;
+article p{
+  margin: 0;
 }
-
